--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npe/boxicon/ess/boxicons.min.css">
 </head>
 <body>
+    <!--navigation bar-->
+</body>
+<header>
+    <a href="#" class="logo"><img src="img/logo.png" alt="">Foodie</a>
+    <div class="bx bx-menu" id="menu-icon"></div>
+
+    <ul class="nav bar">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#shop">Shop</a></li>
+        <li><a href="#customer">Customer</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</header>
     <!--link to JS-->
     <script src="index.js"></script>
-</body>
 </html>
