addition of menu link

--- a/index.html
+++ b/index.html
@@ -3,27 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Healthly Foods</title>
+    <title>Munchies</title>
     <!--Link to the css-->
     <link rel="stylesheet" href="style.css">
-    <!--box icon-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npe/boxicon/ess/boxicons.min.css">
+
 </head>
+
 <body>
     <!--navigation bar-->
+    <img src="https://images.app.goo.gl/MfVtTM3EiV6JBom9A" alt="">
 </body>
-<header>
-    <a href="#" class="logo"><img src="img/logo.png" alt="">Foodie</a>
-    <div class="bx bx-menu" id="menu-icon"></div>
-
     <ul class="nav bar">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#shop">Shop</a></li>
-        <li><a href="#customer">Customer</a></li>
+        <li class="items"> <a href="https://photos.app.goo.gl/kfwVBEhSGWGQ7AX48">Menu </a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
-</header>
     <!--link to JS-->
     <script src="index.js"></script>
 </html>
