--- a/index.html
+++ b/index.html
@@ -12,13 +12,25 @@
 <body>
     <!--navigation bar-->
     <img src="https://images.app.goo.gl/MfVtTM3EiV6JBom9A" alt="">
-</body>
     <ul class="nav bar">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li class="items"> <a href="https://photos.app.goo.gl/kfwVBEhSGWGQ7AX48">Menu </a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
+    <section class="first">
+        <h1 class="heading">MUNCHIES</h1>
+
+        <div class="contactitems">
+            <h1 class="contactdetails">Where to find us</h1>
+            <div class="mapbox">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29456.05356949143!2d88.40783035539927!3d22.65353895378415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89e5c0362082b%3A0x70ee0465893e25d6!2sNorth%20Dumdum%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1676111589425!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <p>Here at "munchies" we pride ourselves in creating unforgetable experiences to our customers</p>
+        </div>
+    </section>
+
     <!--link to JS-->
     <script src="index.js"></script>
+    </body>
 </html>
