--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
 
 <body>
     <!--navigation bar-->
-    <img src="https://images.app.goo.gl/MfVtTM3EiV6JBom9A" alt="">
-    <ul class="nav bar">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li class="items"> <a href="https://photos.app.goo.gl/kfwVBEhSGWGQ7AX48">Menu </a></li>
-        <li><a href="#contact">Contact</a></li>
+    <nav class="navbar h-nav">
+    <div class="navlogo">logo</div>
+    <ul class="navitems navseen">
+        <li class="items"> <a href="">Home </a></li>
+        <li class="items"> <a href="/">About </a></li>
+        <li class="items"> <a href="https://photos.app.goo.gl/kfwVBEhSGWGQ7AX48">Menu</a></li>
     </ul>
+
+    <div class="hams">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+    </div>
+    
     <section class="first">
         <h1 class="heading">MUNCHIES</h1>
-
+<!--location-->
         <div class="contactitems">
             <h1 class="contactdetails">Where to find us</h1>
             <div class="mapbox">
